--- a/BikeShop.WebUI/Views/Home/Index.cshtml
+++ b/BikeShop.WebUI/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@ var routeData = new Dictionary<string, string>
         </div>
         <div class="col">
             <p>
-                @*<a asp-action="Create">Create New</a>*@
+                <a class="btn btn-outline-primary" asp-action="Create">Create New</a>
             </p>
             <table class="table">
                 <thead>
@@ -66,10 +66,10 @@ var routeData = new Dictionary<string, string>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Category.Name)
                             </td>
-                            <td>
-                                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+                            <td style="min-width:240px;">
+                                <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                                <a class="btn btn-outline-primary" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                             </td>
                         </tr>
                     }
