Add Cart models, CartContoller, CartViews, Main index page

--- a/BikeShop.WebUI/Views/Shared/Menu.cshtml
+++ b/BikeShop.WebUI/Views/Shared/Menu.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<string>
     <ul class="nav flex-lg-column flex-row">
         <li class="nav-item">
-            <s1 class="nav-link text-secondary">@ViewData["Header"]</s1>
+            <s1 class="nav-link text-secondary m-1">@ViewData["Header"]</s1>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-secondary" asp-area="" asp-controller="" asp-action="Index">All</a>
+            <a class="nav-link text-secondary" asp-area="" asp-controller="@ViewData["currentController"]" asp-action="Index">All</a>
         </li>
         @foreach (string man in Model)
         {
