--- a/BikeShop.WebUI/Views/Home/Index.cshtml
+++ b/BikeShop.WebUI/Views/Home/Index.cshtml
@@ -1,21 +1,13 @@
 ﻿@model BikeShop.WebUI.Models.HomeIndexViewModel
-@using PagedList.Core.Mvc;
-@using PagedList.Core;
 @using BikeShop.WebUI.Infrastructure
 @{
     ViewData["Title"] = "Products Index";
-@* var routeData = new Dictionary<string, string>
-{
-        {"page", Model.Products.PageNumber.ToString() },
-        {"category", Model.CurrentCategory }
-    };*@
-var routeData = new Dictionary<string, string>
-{
+    var routeData = new Dictionary<string, string>
+    {
         {"page", Model.PageInfo.PageNumber.ToString() },
         {"category", Model.CurrentCategory }
     };
 }
-@*<link href="/Content/PagedList.css" rel="stylesheet" type="text/css" />*@
 <div class="container">
     <h1>Products</h1>
     <div class="row">
@@ -23,61 +15,32 @@ var routeData = new Dictionary<string, string>
             @Html.RenderAction("Menu", "NavCategories")
         </div>
         <div class="col">
-            <p>
-                <a class="btn btn-outline-primary" asp-action="Create">Create New</a>
-            </p>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Products.FirstOrDefault().Model)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Products.FirstOrDefault().Year)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Products.FirstOrDefault().Description)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Products.FirstOrDefault().Price)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Products.FirstOrDefault().Category)
-                        </th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
                     @foreach (var item in Model.Products)
                     {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Model)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Year)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Description)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Price)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Category.Name)
-                            </td>
-                            <td style="min-width:240px;">
-                                <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                                <a class="btn btn-outline-primary" asp-action="Details" asp-route-id="@item.Id">Details</a>
-                                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                            </td>
-                        </tr>
+                        <div class="card text-center">
+                            <div class="card-header">
+                                @item.Model
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">@item.Category.Name</h5>
+                                <p class="card-text">@item.Description</p>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-6">Price: @item.Price $</div>
+                                        <div class="col-6" style="min-width:200px;">
+                                            <a class="btn btn-outline-primary btn-sm" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                                            <form asp-action="AddToCart" asp-controller="Cart" method="post" class="d-inline-block">
+                                                <input type="hidden" name="id" value="@item.Id" />
+                                                <input type="hidden" name="returnUrl" value="@(Context.Request.Path + Context.Request.QueryString)" />
+                                                <input type="submit" value="Add to cart" class="btn btn-success btn-sm float-end" />
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     }
-                </tbody>
-            </table>
             <br />
-            @*<pager class="pager-container" list="@Model.Products" asp-action="Index" asp-controller="Home"
-                   options="@PagedListRenderOptions.Bootstrap4Full" asp-all-route-data="@routeData"></pager>*@
             @Html.PageLinks(Model.PageInfo, b => Url.Action("Index",
                 new { page = b, category = Model.CurrentCategory }))
         </div>
