--- a/BikeShop.WebUI/Views/Product/Details.cshtml
+++ b/BikeShop.WebUI/Views/Product/Details.cshtml
@@ -43,10 +43,6 @@
     </dl>
 </div>
 <div>
-    <form asp-action="AddToCart" asp-controller="Cart" method="post" class="m-1">
-        <input type="hidden" name="id" value="@Model.Id" />
-        <input type="hidden" name="returnUrl" value="@(Context.Request.Path + Context.Request.QueryString)" />
-        <input type="submit" value="Add to cart" class="btn btn-success btn-sm float-end" />
-    </form>
-    <a class="btn btn-outline-primary m-1" asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
+    <a class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
