Add images to product. Update models, controlers, views in part Index and Details

--- a/BikeShop.WebUI/Views/Cart/Index.cshtml
+++ b/BikeShop.WebUI/Views/Cart/Index.cshtml
@@ -4,23 +4,36 @@
 <div class="container">
     <h2>Your Cart</h2>
     <div class="row">
-        <div class="col-2">
+        <div class="col-3 col-md-2">
             @Html.RenderAction("MenuCart", "NavCategories", new { returnUrl = Model.ReturnUrl })
         </div>
-        <div class="col-10">
+        <div class="col-9 col-md-10">
             @foreach (CartItem item in Model.Cart.CartItems)
             {
                 <div class="card text-dark bg-light mb-3 mx-auto" style="max-width: 30rem;">
                     <div class="card-header">@item.Product.Model</div>
                     <div class="card-body">
-                        <h5 class="card-title">@item.Product.Description</h5>
-                        <p class="card-text">Amount: @item.Quantity</p>
-                        <p class="card-text">Price: @item.Product.Price $</p>
-                        <p class="card-text">Total price: @(item.Product.Price * @item.Quantity) $</p>
+                        <h5 class="card-title m-1">@item.Product.Description</h5>
+                        <div class="row m-1 align-items-center">
+                            <div class="card-text">Amount: </div>
+                            <form asp-action="DecrementProduct" asp-controller="Cart" method="post">
+                                <input type="hidden" name="id" value="@item.Product.Id" />
+                                <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
+                                <input type="submit" value="-" class="btn btn-sm btn-outline-primary m-2" />
+                            </form>
+                            <div class="card-text">@item.Quantity</div>
+                            <form asp-action="IncrementProduct" asp-controller="Cart" method="post">
+                                <input type="hidden" name="id" value="@item.Product.Id" />
+                                <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
+                                <input type="submit" value="+" class="btn btn-sm btn-outline-primary m-2" />
+                            </form>
+                        </div>
+                        <p class="card-text m-1">Price: @item.Product.Price $</p>
+                        <p class="card-text m-1">Total price: @(item.Product.Price * @item.Quantity) $</p>
                         <form asp-action="RempoveFromCart" asp-controller="Cart" method="post">
                             <input type="hidden" name="id" value="@item.Product.Id" />
                             <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
-                            <input type="submit" value="Remove" class="btn btn-warning btn-sm float-end" />
+                            <input type="submit" value="Remove" class="btn btn-warning btn-sm float-end m-1" />
                         </form>
                     </div>
                 </div>
