--- a/BikeShop.WebUI/Views/Categories/Index.cshtml
+++ b/BikeShop.WebUI/Views/Categories/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Categories Index";
 }
 
-<h1>Index</h1>
+<h1>Categories</h1>
 
 <p>
     <a class="btn btn-outline-primary" asp-action="Create">Create New</a>
