--- a/BikeShop.WebUI/Views/Product/Details.cshtml
+++ b/BikeShop.WebUI/Views/Product/Details.cshtml
@@ -9,38 +9,37 @@
 <div>
     <h4>Product</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Model)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Model)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Year)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Year)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price) $
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.Name)
-        </dd>
-    </dl>
+    <div class="row align-items-center">
+        <div class="row col col-md-6">
+            <table class="table table-borderless">
+                <tr>
+                    <td scope="row" class="font-weight-bold">@Html.DisplayNameFor(model => model.Model)</td>
+                    <td>@Html.DisplayFor(model => model.Model)</td>
+                </tr>
+                <tr>
+                    <td scope="row" class="font-weight-bold">@Html.DisplayNameFor(model => model.Year)</td>
+                    <td>@Html.DisplayFor(model => model.Year)</td>
+                </tr>
+                <tr>
+                    <td scope="row" class="font-weight-bold">@Html.DisplayNameFor(model => model.Description)</td>
+                    <td>@Html.DisplayFor(model => model.Description)</td>
+                </tr>
+                <tr>
+                    <td scope="row" class="font-weight-bold">@Html.DisplayNameFor(model => model.Price)</td>
+                    <td>@Html.DisplayFor(model => model.Price) $</td>
+                </tr>
+                <tr>
+                    <td scope="row" class="font-weight-bold">@Html.DisplayNameFor(model => model.Category)</td>
+                    <td>@Html.DisplayFor(model => model.Category.Name)</td>
+                </tr>
+            </table>
+        </div>
+        <div class="col flex-grow-0 col-md-6">
+            <a href="@Model.ImageFiles.FirstOrDefault().Path" target="_blank" class="mx-auto d-block">
+                <img src="@Model.ImageFiles.FirstOrDefault().Path" alt="Image" height="100" />
+            </a>
+        </div>
+    </div>
 </div>
 <div>
     <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
