--- a/BikeShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/BikeShop.WebUI/Views/Shared/_Layout.cshtml
@@ -69,6 +69,12 @@
                             <li class="nav-item align-self-center">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                             </li>
+                            <li class="nav-item align-self-center">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">Users</a>
+                            </li>
+                            <li class="nav-item align-self-center">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">User roles</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
